--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,12 @@
   .MuiInput-root{
         color: aliceblue;
 }
+#image_rotate:hover {
+    cursor: default;
+    transform: rotate(3deg);
+    transition: all 0.1s ease-in-out 0s;
+
+}
+.MuiInputLabel-root	{
+    color: antiquewhite;
+}
